--- a/kiarra-site/src/App.css
+++ b/kiarra-site/src/App.css
@@ -291,6 +291,13 @@ h2 {
   height: 350px;
 }
 
+.certifications {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  padding: 20px;
+}
+
 .projects {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -384,9 +391,9 @@ h2 {
 .clients-container {
   max-width: 100%;
   margin: 0 auto;
-  padding: 20px;
+  padding-left: 20px;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   /* Three equal columns */
   gap: 20px;
   /* Spacing between grid items */
@@ -541,11 +548,24 @@ h2 {
     grid-template-columns: 1fr;
     gap: 10px;
   }
+  .certifications {
+    grid-template-columns: 1fr;
+    gap: 10px;
+  }
 
   .contact-component {
     padding-top: 75px;
     min-height: 800px;
   }
 
+
+}
+
+@media (min-width: 1450px) and (max-width: 1700px) {
+
+  .certifications {
+    grid-template-columns: 1fr;
+    gap: 10px;
+  }
 
 }
