--- a/kiarra-site/src/App.css
+++ b/kiarra-site/src/App.css
@@ -291,7 +291,7 @@ h2 {
   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   cursor: pointer;
-  min-height: 350px;
+  min-height: 500px;
   overflow: hidden;
 }
 
@@ -304,7 +304,7 @@ h2 {
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   padding: 20px;
 }
@@ -530,6 +530,7 @@ h2 {
     word-wrap: break-word; /* Ensures that long words will wrap and not overflow */
     overflow-wrap: break-word; /* Same as above, it's a standard property for word-wrap */
     padding: 10px; /* Add padding to prevent text from touching the edges */
+    min-height: 350px;
   }
 
   .projects {
@@ -597,9 +598,12 @@ h2 {
   .experience {
     width: 90%;
   }
+  .project {
+    min-height: 450px;
+  }
 
   .projects {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(1, 1fr);
     gap: 10px;
   }
   .certifications {
@@ -622,8 +626,11 @@ h2 {
     gap: 10px;
   }
   .projects {
-    grid-template-columns: 2fr;
+    grid-template-columns: repeat(2, 1fr);
     gap: 10px;
+  }
+  .project {
+    min-height: 510px;
   }
 
 }
